--- a/apps/firebase-poc/package.json
+++ b/apps/firebase-poc/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.9.3",
-    "vite": "^7.2.2"
+    "@openai/agents": "^0.1.9",
+    "lit-html": "^3.3.1",
+    "openai": "^6.3.0",
+    "rxjs": "^7.8.2",
+    "zod": "^3.25.76"
   }
 }
