basic prompt engieenring

--- a/apps/firebase-poc/firebase.rules.json
+++ b/apps/firebase-poc/firebase.rules.json
@@ -10,6 +10,7 @@
           ".validate": "newData.isString()"
         },
         "systemPrompt": {
+          ".read": true,
           ".validate": "newData.isString()"
         },
         "sessions": {
