--- a/apps/firebase-poc/package.json
+++ b/apps/firebase-poc/package.json
@@ -13,6 +13,7 @@
     "lit-html": "^3.3.1",
     "openai": "^6.3.0",
     "rxjs": "^7.8.2",
+    "vite": "^7.2.2",
     "zod": "^3.25.76"
   },
   "dependencies": {
