--- a/apps/firebase-poc/package.json
+++ b/apps/firebase-poc/package.json
@@ -9,15 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@openai/agents": "^0.1.9",
-    "lit-html": "^3.3.1",
-    "openai": "^6.3.0",
-    "rxjs": "^7.8.2",
-    "vite": "^7.2.2",
-    "zod": "^3.25.76"
+    "vite": "^7.2.2"
   },
   "dependencies": {
     "@streamparser/json": "^0.0.22",
-    "firebase": "^12.5.0"
+    "firebase": "^12.5.0",
+    "@openai/agents": "^0.1.9",
+    "lit-html": "^3.3.1",
+    "openai": "^6.3.0",
+    "rxjs": "^7.8.2"
   }
 }
