--- a/apps/meditation-rock-poc/firebase.rules.json
+++ b/apps/meditation-rock-poc/firebase.rules.json
@@ -9,6 +9,9 @@
         "systemPrompt": {
           ".read": true
         },
+        "originStory": {
+          ".read": true
+        },
         "sessions": {
           ".read": true,
           ".write": true
